--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
         "dev": "npm-run-all --parallel dev:*",
         "dev:server": "nodemon --watch build --exec \"node build/bundle.js\"",
         "dev:build-server": "webpack --config webpack.server.js --watch",
-        "dev:build-client": "webpack --config webpack.client.js --watch"
+        "dev:build-client": "webpack --config webpack.client.js --watch",
+        "build": "webpack --config webpack.client.js & webpack --config webpack.server.js",
+        "start": "node build/bundle.js"
     },
     "author": "",
     "license": "ISC",
